// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::enter email (create account) should redirect to /security-code-invalid-request when request OTP more than 5 times 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "",
}
`;

exports[`Integration::enter email (create account) should return enter email page 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account",
}
`;

exports[`Integration::enter email (create account) should return error when csrf not present 1`] = `
Object {
  "taxonomyLevel1": undefined,
  "taxonomyLevel2": undefined,
}
`;

exports[`Integration::enter email (create account) should return internal server error when /user-exists API call response is 500 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "",
}
`;

exports[`Integration::enter email (create account) should return validation error when email not entered 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account",
}
`;

exports[`Integration::enter email (create account) should return validation error when invalid email entered 1`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account",
}
`;

exports[`Integration::enter email (create account) should return validation error when invalid email entered 2`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account",
}
`;

exports[`Integration::enter email (create account) should return validation error when invalid email entered 3`] = `
Object {
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account",
}
`;
